# credit-risk-ml-pipeline

./: .dockerignore  .gitignore  Dockerfile.serve  Dockerfile.train  README.md  cursor_ai_project_instructions_ml_engineer.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API_DOCUMENTATION.md  DATASET_VALIDATION.md  DOCKER.md  GITHUB_SETUP.md  GIT_WORKFLOW.md  MLFLOW.md  OPERATIONS_RUNBOOK.md  PRODUCTION_CHECKLIST.md  SSH_SETUP.md  STEPS_14_17_IMPLEMENTATION_PLAN.md  TESTING_STEPS_14_16.md  ingestion_metadata.json  logistic_regression_tuning_results.json  random_forest_tuning_results.json  validation_report.json  xgboost_tuning_results.json
docs/evaluation/: evaluation_results.json  evaluation_summary.json
docs/interpretability/: shap_analysis_summary.json
docs/interpretability/logistic_regression/: feature_importance.csv
docs/interpretability/random_forest/: feature_importance.csv
docs/interpretability/xgboost/: feature_importance.csv
scripts/: check_date_range.py  check_raw_date_range.py  clean_data.py  engineer_features.py  evaluate_models.py  explain_models.py  ingest_raw_data.py  inspect_dataset.py  promote_model.py  retrain_model.py  rollback_model.py  run_api.py  train_models.py  tune_models.py  validate_dataset.py
src/: __init__.py
src/api/: __init__.py  app.py  monitoring.py  serving.py
src/config/: __init__.py  dataset_config.py  feature_config.py
src/data/: __init__.py  chunked_processing.py  cleaning.py  ingestion.py  pipeline.py  sampling.py  split_utils.py  splitting.py  validation.py
src/evaluation/: __init__.py
src/features/: __init__.py  builders.py  pipeline.py
src/models/: __init__.py  evaluation.py  interpretability.py  trainers.py  tuning.py
src/pipelines/: __init__.py
src/registry/: __init__.py  artifact_registry.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py  test_api_routes.py  test_imports.py
