[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-ml-pipeline"
version = "0.1.0"
description = "Production-ready ML pipeline for credit risk prediction"
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
skip-string-normalization = false
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "data",
    "docs/evaluation",
    "docs/interpretability",
    "models",
    "artifacts",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "W"]
ignore = ["E501"]  # black handles line length
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
